test-expected/large/reportdata/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: reportdata
    foo.com/duversion: 1.14.75-20190925.1569390034591
    foo.com/version: 1.14.75
  labels:
    app.kubernetes.io/name: reportdata
    helm.sh/chart: reportdata-1.14.75
  name: reportdata
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: reportdata
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: reportdata
        app.kubernetes.io/name: reportdata
    spec:
      containers:
      - env:
        - name: FOO_CACHE_CONFIG_MEMBERSHIPPORTRANGE
          value: 35001-35003
        image: repo.foo.com/va-125.0.0-x64_redhat_linux_7-docker-prod/foo-report-data:1.14.75-20190925.1569390034591
        imagePullPolicy: IfNotPresent
        name: reportdata
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 35001
          name: cache1
        - containerPort: 35002
          name: cache2
        - containerPort: 35003
          name: cache3
        resources: {}
