test-expected/large/reportdata/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: reportdata
    foo.com/duversion: 1.14.75-20190925.1569390034591
    foo.com/version: 1.14.75
  labels:
    app.kubernetes.io/name: reportdata
    helm.sh/chart: reportdata-1.14.75
  name: reportdata
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /reportData
    - uri:
        prefix: /reportData/
    route:
    - destination:
        host: reportdata.peekay.svc.cluster.local
